--- a/content.css
+++ b/content.css
@@ -13,8 +13,8 @@ a{color:#cc6715}
 /* Header is also in single page */
 header#header #headerContent h1{color:#cc6715;border:none;margin-right:75px}
 #header h1{margin:0;font-size:1em;color:#00843D}
-#emptyHeader,#nodeDecoration{height:auto;font-size:1em;text-align:left;letter-spacing:.5px;padding:16px 25px 16px 10px;border-bottom:3px solid #00843D;margin-bottom:0;background:url(./_adultos_logo.png) no-repeat 100% 50%}
-#header{height:auto;font-size:1em;text-align:left;letter-spacing:.5px;padding:16px 25px 16px 0px;border:none;margin-bottom:0;background:url(./_adultos_logo.png) no-repeat 100% 50%}
+#emptyHeader,#nodeDecoration{height:auto;font-size:1em;text-align:left;letter-spacing:.5px;padding:16px 25px 16px 10px;border-bottom:3px solid #00843D;margin-bottom:0;background:url(./_adl_logo.png) no-repeat 100% 50%}
+#header{height:auto;font-size:1em;text-align:left;letter-spacing:.5px;padding:16px 25px 16px 0px;border:none;margin-bottom:0;background:url(./_adl_logo.png) no-repeat 100% 50%}
 .exe-single-page #header{font-size:1.55em}
 #nodeTitle{font-size:1.55em;margin:0;color:#00843D;padding-right:60px}
 #header h1,#nodeTitle{text-shadow:0 0 8px rgba(255,255,255,.6),0 0 5px rgba(255,255,255,.6),0 0 2px rgba(255,255,255,.9)}
@@ -245,15 +245,15 @@ div.fx-timeline-container{border-left:2px solid #872C1A!important}
 .fx-timeline-container a.fx-timeline-expand:hover{color:#fff!important;background:#872C1A!important}
 
 /* UDL */
-body .exe-udlContent .exe-udlContent-alt-lnk{background-image:url(./_adultos_udl_icons-sm.png)}
+body .exe-udlContent .exe-udlContent-alt-lnk{background-image:url(./_adl_udl_icons-sm.png)}
 @media screen and (min-width:1px) {
-	body .exe-udlContent .exe-udlContent-alt-lnk{background-image:url(./_adultos_udl_icons.png)}
+	body .exe-udlContent .exe-udlContent-alt-lnk{background-image:url(./_adl_udl_icons.png)}
 }
 @media screen and (min-width:1px) {
-	body .exe-udlContent .udl-character:before{background-image:url(./_adultos_udl_ch-1.gif)}
-	body .exe-udlContent .udl-character-2:before{background-image:url(./_adultos_udl_ch-2.gif)}
-	body .exe-udlContent .udl-character-3:before{background-image:url(./_adultos_udl_ch-3.gif)}
-	body .exe-udlContent .udl-character-4:before{background-image:url(./_adultos_udl_ch-4.gif)}
+	body .exe-udlContent .udl-character:before{background-image:url(./_adl_udl_ch-1.gif)}
+	body .exe-udlContent .udl-character-2:before{background-image:url(./_adl_udl_ch-2.gif)}
+	body .exe-udlContent .udl-character-3:before{background-image:url(./_adl_udl_ch-3.gif)}
+	body .exe-udlContent .udl-character-4:before{background-image:url(./_adl_udl_ch-4.gif)}
 }
 
 /* Note */
@@ -280,7 +280,7 @@ li{list-style-position:outside}
 .toggle-idevice{text-align:right;display:block;margin-right:13px;line-height:21px;height:21px}
 .iDevice_header .toggle-idevice{position:absolute;right:13px;bottom:13px;margin:0}
 .toggle-idevice{margin-top:5px;margin-bottom:0px}
-.toggle-idevice a{display:inline-block;width:20px;height:20px;background:url(./_adultos_icons.png) no-repeat 0 -20px}
+.toggle-idevice a{display:inline-block;width:20px;height:20px;background:url(./_adl_icons.png) no-repeat 0 -20px}
 .toggle-idevice .show-idevice{background-position:0 0}
 .toggle-idevice span{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0}
 .toggle-idevice + .iDevice.emphasis0{margin-top:0}
@@ -294,7 +294,7 @@ li{list-style-position:outside}
 #packageLicense p{margin:20px 0}
 #packageLicense a{color:#444;text-decoration:underline}
 #packageLicense.propietary{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0}
-#packageLicense.cc{padding:0 20px 10px 110px;background:transparent url(./_adultos_licenses.gif) no-repeat 20px 5px}
+#packageLicense.cc{padding:0 20px 10px 110px;background:transparent url(./_adl_licenses.gif) no-repeat 20px 5px}
 #packageLicense.cc-by-sa{background-position:20px -95px}
 #packageLicense.cc-by-nd{background-position:20px -195px}
 #packageLicense.cc-by-nc{background-position:20px -295px}
@@ -330,14 +330,14 @@ li{list-style-position:outside}
 	header.nodeDecoration h1.nodeTitle{page-break-after:none!important}
 	#header{height:auto;font-size:1em;text-align:left;letter-spacing:.5px;padding:0px 25px 16px 0px;border:none;margin-bottom:0}
 	.nodeDecoration{padding-top:10px}
-	#headerContent{min-height:51px;background:url(./_adultos_logo.png) no-repeat 100% 20%;padding-bottom:15px}
+	#headerContent{min-height:51px;background:url(./_adl_logo.png) no-repeat 100% 20%;padding-bottom:15px}
 	#nodeDecoration,#emptyHeader{color:#000;text-shadow:none;background:none;border:2px solid #CC6715;padding:5px 5px 10px 15px;margin-left:10px}
 	#nodeDecoration,#header,#emptyHeader{color:#000;text-shadow:none;background:none;border:none;padding:20px 0}
 	#packageLicense{text-align:left;font-size:.8em;padding:0 20px;color:#444;line-height:1em;margin:0 0 25px 0;background:#fff;border-top:1px solid #00843D}
 	#packageLicense p{margin:20px 0}
 	#packageLicense a{color:#444;text-decoration:underline}
 	#packageLicense.propietary{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0}
-	#packageLicense.cc{padding:0 20px 0px 110px;background:transparent url(./_adultos_licenses.gif) no-repeat 20px 5px}
+	#packageLicense.cc{padding:0 20px 0px 110px;background:transparent url(./_adl_licenses.gif) no-repeat 20px 5px}
 	#packageLicense.cc-by-sa{background-position:20px -95px}
 	#packageLicense.cc-by-nd{background-position:20px -195px}
 	#packageLicense.cc-by-nc-sa{background-position:20px -295px}
