--- a/nav.css
+++ b/nav.css
@@ -2,17 +2,17 @@ html,body{min-height:100%}
 html{padding:0;background:#f1f2f4}
 body{padding:0;text-align:center}
 @media all and (min-width:1px){
-	body{min-height:100vh;background:#f1f2f4 url(./_adultos_bg.png) no-repeat 0 0}
+	body{min-height:100vh;background:#f1f2f4 url(./_adl_bg.png) no-repeat 0 0}
 }
 #lbOverlay{background:#f3f3f3}
 #content{width:100%;max-width:1230px;min-width:300px;margin:0 auto;text-align:left;position:relative;padding-bottom:21px}
-#main-wrapper{padding:0 25px 1px 305px;background:#fff url(./_adultos_left_column.gif) repeat-y 0 0;box-shadow:rgba(0,0,0,0.4) 0 3px 8px}
+#main-wrapper{padding:0 25px 1px 305px;background:#fff url(./_adl_left_column.gif) repeat-y 0 0;box-shadow:rgba(0,0,0,0.4) 0 3px 8px}
 .no-nav #main-wrapper{padding-left:25px;background:#fff}
 #main{width:100%}
 #header,#emptyHeader{border:none;padding:40px 210px 20px 20px;background:none;font-size:2em}
 #emptyHeader{height:42px}
 #headerContent{color:#cc6715;text-shadow:1px 1px 1px #FFF}
-#nodeDecoration{padding:0 30px 0 0;margin:0 0 25px 0;border:none;text-shadow:none;background:none;border-bottom:3px solid #00843D;background:url(./_adultos_logo.png) no-repeat 100% 50%!important}
+#nodeDecoration{padding:0 30px 0 0;margin:0 0 25px 0;border:none;text-shadow:none;background:none;border-bottom:3px solid #00843D;background:url(./_adl_logo.png) no-repeat 100% 50%!important}
 #nodeTitle{padding:17px 0px 15px 10px;color:#00843D;letter-spacing:.5px;font-size:1.7em;font-weight:normal;margin-right:2.3em}
 #siteFooter{padding:5px 20px 20px 20px;text-align:right;margin-top:-56px}
 /* Navigation */
@@ -37,7 +37,7 @@ body{padding:0;text-align:center}
 /* Pagination */
 .pagination{text-align:right;font-size:.95em}
 .pagination .sep{display:none}
-.pagination a{display:block;position:absolute;right:52px;width:32px;height:32px;padding:0;background:url(./_adultos_nav_icons.png) no-repeat 0 0}
+.pagination a{display:block;position:absolute;right:52px;width:32px;height:32px;padding:0;background:url(./_adl_nav_icons.png) no-repeat 0 0}
 body .pagination a{filter:alpha(opacity=100);opacity:1;outline:none}
 .pagination a span span{display:none}
 .pagination a span{position:absolute;overflow:hidden;clip:rect(0,0,0,0);height:0}
@@ -65,7 +65,7 @@ body .pagination a{filter:alpha(opacity=100);opacity:1;outline:none}
 #content{overflow:auto}
 
 #header-options{margin:20px 0 0;position:absolute;top:2em;right:100px;z-index:99}
-#header-options a{font-size:.95em;margin-left:15px;margin-right:8px;background:transparent url(./_adultos_menu.gif) no-repeat 5px 50%;padding:0 10px 0 32px;color:#444}
+#header-options a{font-size:.95em;margin-left:15px;margin-right:8px;background:transparent url(./_adl_menu.gif) no-repeat 5px 50%;padding:0 10px 0 32px;color:#444}
 #header-options a:hover,#header-options a:focus{color:#00843d}
 #exe-client-search-text{max-width:50%}
 .exe-client-search-result{background:#ecd078;padding:0 2px}
@@ -92,7 +92,7 @@ a .exe-client-search-result{color:#00566a}
 	.pagination .next{position:absolute;right:0}
 	#header-options{position:relative;top:0;left:0;margin:0;background:#FFF;font-size:.95em}
 	#header-options a{margin-left:0;display:block;width:100%;height:auto;color:#3a4749;border-top:1px solid #dbdbdb;border-bottom:1px solid #dbdbdb;line-height:2.6em;letter-spacing:1px;padding:0;/* text-transform:lowercase */}
-	#header-options a span{background:url(./_adultos_menu.gif) no-repeat 18px 50%;padding-left:45px}
+	#header-options a span{background:url(./_adl_menu.gif) no-repeat 18px 50%;padding-left:45px}
 	#header-options #print-page{display:none}
 	#header-options #toggle-nav{background:none}
 	#bottomPagination .page-counter{margin:0;padding-top:5px;display:inline-block}
